src/styles/globalStyle.css
@font-face {
    font-family: 'Ferrum';
    src: url '(../fonts/ferrum.otf)' format('otf');
}

html {
    font-family: 'Ferrum', Times, serif;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body {
    background-image: url(../images/pizza.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

#content {
    text-align: center;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
}

.middleContent {
    display: flex;
    justify-content: center;
    align-items: center;
}

.header {
    width: 100vw;
    background-color: rgba(0, 0, 0, 0.305);
    display: flex;
    flex-direction: row;
}

.subHeader {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 10px;
}

.tabs,
.main {
    font-size: min(6vw, 80px);
    color: rgb(255, 255, 255);
    height: fit-content;
    width: fit-content;
    padding: 2vw;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: transform 0.2s;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.main {
    color: rgb(255, 255, 255);
    font-style: italic;
    align-self: flex-start;
}
.tabs:hover,
.main:hover {
    color: rgb(254, 153, 0);
    transform: translateY(5%);
}

.active {
    color: rgb(254, 153, 0);
    transform: translateY(5%);
}

.footer {
    font-family: 'Courier New', Courier, monospace;
    font-size: min(35px, 3vw);
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 0px;
    width: 100%;
    height: 3vh;
    color: rgba(255, 255, 255, 0.572);
    background-color: rgba(0, 0, 0, 0.181);
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.swipeInfo {
    font-family: 'Courier New', Courier, monospace;
    font-size: min(100px, 5vw);
    position: absolute;
    bottom: 100px;
    left: 0px;
    right: 0px;
    width: 100%;
    height: 3vh;
    color: rgba(255, 255, 255, 0.597);
    display: flex;
    justify-content: space-around;
    align-items: center;
}

@media screen and (min-width: 800px) {
    .swipeInfo {
        display: none;
    }
}

